# axis-axis2-c-savan

./: INSTALL  Makefile.am  README  build.sh  configure.ac  dist_hook.sh
include/: savan_constants.h  savan_db_mgr.h  savan_error.h  savan_filter.h  savan_filter_mod.h  savan_publisher.h  savan_publisher_mod.h  savan_publishing_client.h  savan_storage_mgr.h  savan_sub_processor.h  savan_subs_mgr.h  savan_subscriber.h  savan_util.h
samples/: Makefile.am  build.sh  configure.ac
samples/client/subscriber/: Makefile.am  subscriber.c
samples/server/: Makefile.am
samples/server/listener/: Makefile.am  listener.c  listener_skeleton.c  services.xml
samples/server/publisher/: Makefile.am  publisher_skeleton.c  services.xml
samples/server/weather/: Makefile.am  services.xml  weather.c  weather.h  weather_skeleton.c
src/: Makefile.am
src/client/: Makefile.am  savan_client.c  savan_publishing_client.c
src/core/: Makefile.am  mod_savan.c  savan_sub_processor.c
src/data/: axis2.xml  create_subs_mgr_repo.sh  module.xml
src/filters/common/: Makefile.am  filter.c  filter_mod.c
src/filters/xpath/: Makefile.am  filter.c  filter_mod.c
src/handlers/: Makefile.am  savan_in_handler.c  savan_out_handler.c
src/msgreceivers/: Makefile.am  savan_msg_recv.c
src/publisher/: Makefile.am
src/publisher/common/: Makefile.am  publisher_mod.c
src/publisher/default/: Makefile.am  publisher.c  publisher_mod.c
src/publisher/esb/: Makefile.am  publisher_mod.c
src/publishers/: Makefile.am
src/publishers/default/: Makefile.am  publisher.c
src/storage/: Makefile.am
src/storage/common/: Makefile.am
src/storage/inmemory/: storage_mgr_inmemory.c
src/storage/registry/: Makefile.am  storage_mgr.c
src/storage/service/: Makefile  Makefile.am  service_storage_mgr.c
src/storage/sqlite/: Makefile.am  sqlite3.c  storage_mgr.c
src/subs_mgr/: Makefile.am  savan_subs_mgr.h  services.xml  subs_mgr.c  subs_mgr_skel.c
src/subs_mgrs/: Makefile.am
src/subs_mgrs/common/: Makefile.am  storage_mgr.c  subs_mgr.c
src/subs_mgrs/inmemory/: Makefile.am  storage_mgr_inmemory.c
src/subs_mgrs/registry/: Makefile.am  storage_mgr.c  subs_mgr.c
src/subs_mgrs/service/: Makefile.am  service_storage_mgr.c  subs_mgr.c
src/subs_mgrs/service/subs_mgr_svc/: subs_mgr.c  subs_mgr_skel.c
src/subs_mgrs/sqlite/: Makefile.am  storage_mgr.c  subs_mgr.c
src/subscribers/: Makefile.am  savan_subscriber.c
src/util/: Makefile.am  db_mgr.c  error.c  savan_util.c  sqlite3.c
xdocs/: index.html  navigation.xml
xdocs/docs/: index.html  installationguide.html  savanc_manual.html
